syntax = "proto3";

option java_package = "com.example.productservice";
option java_outer_classname = "ProductServiceProto";

service ProductService {
    rpc getProductById (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
    string product_id = 1;
}

message ProductResponse {
    string product_id = 1;
    string name = 2;
    double price = 3;
}
